[gd_scene load_steps=8 format=3 uid="uid://djytf238sd0cn"]

[ext_resource type="Texture2D" uid="uid://b5ij6onu06h8" path="res://Assets/UI/Ring.png" id="2_krns7"]
[ext_resource type="Texture2D" uid="uid://dgls43o4elnn7" path="res://Assets/UI/RingPressed.png" id="3_fjl8w"]
[ext_resource type="Texture2D" uid="uid://c4vntn7b6m7tv" path="res://Assets/UI/RingHover.png" id="4_mux1i"]
[ext_resource type="Script" path="res://Scripts/PortraitFrame.gd" id="5_3fkih"]
[ext_resource type="Texture2D" uid="uid://d0obal85mleyk" path="res://Assets/UI/RingDisabled.png" id="5_rem24"]
[ext_resource type="Shader" path="res://Shaders/Circular.gdshader" id="6_u6mpw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xs3gn"]
shader = ExtResource("6_u6mpw")
shader_parameter/radius = 0.6
shader_parameter/center = Vector2(0.5, 0.5)

[node name="PortraitFrame" type="TextureButton"]
z_index = 99
offset_left = 1067.0
offset_top = 9.0
offset_right = 1263.0
offset_bottom = 205.0
scale = Vector2(0.5, 0.5)
toggle_mode = true
texture_normal = ExtResource("2_krns7")
texture_pressed = ExtResource("3_fjl8w")
texture_hover = ExtResource("4_mux1i")
texture_disabled = ExtResource("5_rem24")
script = ExtResource("5_3fkih")

[node name="Portrait" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_xs3gn")
layout_mode = 0
offset_left = 18.0
offset_top = 18.0
offset_right = 1810.0
offset_bottom = 1810.0
scale = Vector2(0.09, 0.09)
flip_h = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
